--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Mi Portafolio</h1>
-    <em>Elenes Lafuente Santiago</em>
+    <em>Elenes Lafuente Santiago</em><br><br>
+    <img src="https://avatars.githubusercontent.com/u/159394613?v=4" alt="Foto random">
 </body>
 </html>
