--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Mi Portafolio</h1>
-    <em>Elenes Lafuente Santiago</em><br><br>
     <img src="https://avatars.githubusercontent.com/u/159394613?v=4" alt="Foto random">
+    <br><em>Elenes Lafuente Santiago</em><br><br>
+    <a href="practica_parcial1.html">Portafolio Parcial #1</a>
 </body>
 </html>
