--- a/Parcial1/practicaparcial1.html
+++ b/Parcial1/practicaparcial1.html
@@ -17,7 +17,22 @@
         <tbody>
             <td>Practica 1</td>
             <td>Elementos Basicos de HTML Parte 1</td>
-            <td><a href="Practica1_Elementos_HTML_Parte1.html">Ir a la Practica</a></td>
+            <td><a href="Practica1_Elementos_HTML_Parte1.html">Visitar</a></td>
+        </tbody>
+        <tbody>
+            <td>Practica 2</td>
+            <td>Practica #2. Elementos HTML parte 2</td>
+            <td><a href="Practica2.html">Visitar/a></td>
+        </tbody>
+        <tbody>
+            <td>Practica 3</td>
+            <td>Proyecto #3. Elementos basicos de HTML</td>
+            <td><a href="practica3.html">Visitar</a></td>
+        </tbody>
+        <tbody>
+            <td>Practica 4</td>
+            <td>Manejo de Imagenes en HTML</td>
+            <td><a href="Parcial1/practica4.html">Visitar</a></td>
         </tbody>
     </table>
 </body>
