--- a/Parcial1/practicaparcial1.html
+++ b/Parcial1/practicaparcial1.html
@@ -22,7 +22,7 @@
         <tbody>
             <td>Practica 2</td>
             <td>Practica #2. Elementos HTML parte 2</td>
-            <td><a href="Practica2.html">Visitar/a></td>
+            <td><a href="Practica2.html">Visitar</td>
         </tbody>
         <tbody>
             <td>Practica 3</td>
