--- a/Parcial1/practica3.html
+++ b/Parcial1/practica3.html
@@ -9,25 +9,25 @@
   <h1>Proyecto #3. Elementos basicos de HTML</h1>
 
   <body style="background-color: red; text-align: center; text-decoration: solid;">
-    Primer DIV 
-    background-color: red;
-    text-align: center;
-    text-decoration: solid;
+    Primer DIV <br>
+    background-color: red; <br>
+    text-align: center; <br>
+    text-decoration: solid; <br><br>
   </body>
 
   <body style="background-color: black; text-align: center; text-decoration: solid;">
-    Segundo DIV 
-    background-color: black;
-    text-align: center;
-    text-decoration: solid;
+    Segundo DIV <br>
+    background-color: black; <br>
+    text-align: center; <br>
+    text-decoration: solid; <br><br>
   </body>
 
   <body style="background-color: blue; text-align: center; text-decoration: solid;">
-    Tercer DIV 
-    background-color: blue;
-    text-align: center;
-    text-decoration: solid;
-    Elenes Lafuente Santiago 4AVP
+    Tercer DIV <br>
+    background-color: blue; <br>
+    text-align: center; <br>
+    text-decoration: solid; <br>
+    Elenes Lafuente Santiago 4AVP <br>
   </body>
 </body>
 </html>
