--- a/Parcial1/practicaparcial1.html
+++ b/Parcial1/practicaparcial1.html
@@ -32,7 +32,7 @@
         <tbody>
             <td>Practica 4</td>
             <td>Manejo de Imagenes en HTML</td>
-            <td><a href="Parcial1/practica4.html">Visitar</a></td>
+            <td><a href="Practica 4/practica4.html">Visitar</a></td>
         </tbody>
     </table>
 </body>
