--- a/Parcial1/practicaparcial1.html
+++ b/Parcial1/practicaparcial1.html
@@ -34,6 +34,11 @@
             <td>Manejo de Imagenes en HTML</td>
             <td><a href="Practica 4/practica4.html">Visitar</a></td>
         </tbody>
+        <tbody>
+            <td>Practica 5</td>
+            <td>Manejo de tablas en HTML</td>
+            <td><a href="Practica 4/practica5.html">Visitar</a></td>
+        </tbody>
     </table>
 </body>
 </html>
