--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Portafolio Personal</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Mi Portafolio</h1>
-    <img src="https://avatars.githubusercontent.com/u/159394613?v=4" alt="Foto random">
-    <br><em>Elenes Lafuente Santiago</em><br><br>
-    <a href="Parcial1/practicaparcial1.html">Portafolio Parcial #1</a>
+<body bgcolor="aqua">
+    <h1 style="text-align: center;">Mi Portafolio</h1>
+    <div style="text-align: center;">
+        <a href="Parcial1/practicaparcial1.html">Portafolio Parcial #1</a><br><br>
+    </div>
+    <center><img src="https://avatars.githubusercontent.com/u/159394613?v=4" alt="Foto random"></center>
+    <br><em>
+        <footer style="text-align: center;">
+            Elenes Lafuente Santiago
+        </footer>
+    </em><br><br>
 </body>
 </html>
