--- a/Parcial1/practicaparcial1.html
+++ b/Parcial1/practicaparcial1.html
@@ -1,44 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practica Parcial 1</title>
+    <title>Practica Parcial #1</title>
+    <link rel="stylesheet" href="portafolio.css">
 </head>
 <body>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>Nombre de la Pagina</th>
-                <th>Descripcion</th>
-                <th>Hipervinculo</th>
-            </tr>
-        </thead>
-        <tbody>
-            <td>Practica 1</td>
-            <td>Elementos Basicos de HTML Parte 1</td>
-            <td><a href="Practica1_Elementos_HTML_Parte1.html">Visitar</a></td>
-        </tbody>
-        <tbody>
-            <td>Practica 2</td>
-            <td>Practica #2. Elementos HTML parte 2</td>
-            <td><a href="Practica2.html">Visitar</td>
-        </tbody>
-        <tbody>
-            <td>Practica 3</td>
-            <td>Proyecto #3. Elementos basicos de HTML</td>
-            <td><a href="practica3.html">Visitar</a></td>
-        </tbody>
-        <tbody>
-            <td>Practica 4</td>
-            <td>Manejo de Imagenes en HTML</td>
-            <td><a href="Practica 4/practica4.html">Visitar</a></td>
-        </tbody>
-        <tbody>
-            <td>Practica 5</td>
-            <td>Manejo de tablas en HTML</td>
-            <td><a href="Practica 4/practica5.html">Visitar</a></td>
-        </tbody>
-    </table>
+    <header>
+        <div class="contenedor">
+            <h1>Mi Portafolio</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Volver</a></li>
+                    <li><a href="https://github.com/LicElenes1/LicElenes1.github.io">Github</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section id="proyectos">
+        <div class="contenedor">
+            <center><h2>Mis Proyectos</h2>
+            <table border="1">
+              <thead>
+                  <tr>
+                      <th>Nombre de la Pagina</th>
+                      <th>Descripcion</th>
+                      <th>Hipervinculo</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <td>Practica 1</td>
+                  <td>Elementos Basicos de HTML Parte 1</td>
+                  <td><a href="Practica1_Elementos_HTML_Parte1.html">Visitar</a></td>
+              </tbody>
+              <tbody>
+                  <td>Practica 2</td>
+                  <td>Practica #2. Elementos HTML parte 2</td>
+                  <td><a href="Practica2.html">Visitar</td>
+              </tbody>
+              <tbody>
+                  <td>Practica 3</td>
+                  <td>Proyecto #3. Elementos basicos de HTML</td>
+                  <td><a href="practica3.html">Visitar</a></td>
+              </tbody>
+              <tbody>
+                  <td>Practica 4</td>
+                  <td>Manejo de Imagenes en HTML</td>
+                  <td><a href="Practica 4/practica4.html">Visitar</a></td>
+              </tbody>
+              <tbody>
+                  <td>Practica 5</td>
+                  <td>Manejo de tablas en HTML</td>
+                  <td><a href="Practica 4/practica5.html">Visitar</a></td>
+              </tbody>
+          </table>
+        </div>
+    </center>
+    </section>
+
+    <footer>
+        <div class="contenedor">
+            <p>Pagina web hecha por - Elenes Lafuente Santiago</p>
+            <p>Alumno de la Escuela <a href="https://cetis107.edu.mx/portal/">CETIs #107</a></p>
+        </div>
+    </footer>
 </body>
 </html>
