--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Descripcion" content="Pagina web destinada como proyecto - Elenes Lafuente Santiago">
+    <meta name="author" content="Elenes Lafuente Santiago">
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/159394613?v=4">
     <title>Mi Portafolio Personal</title>
     <link rel="stylesheet" href="style.css">
     <script>
