--- a/Parcial1/practica3.html
+++ b/Parcial1/practica3.html
@@ -8,9 +8,9 @@
 <body>
   <h1>Proyecto #3. Elementos basicos de HTML</h1>
 
-  <body style="background-color: red; text-align: center; text-decoration: solid;">
+  <body style="background-color: aqua; text-align: center; text-decoration: solid;">
     Primer DIV <br>
-    background-color: red; <br>
+    background-color: aqua; <br>
     text-align: center; <br>
     text-decoration: solid; <br><br>
   </body>
