--- a/Parcial1/practicaparcial1.html
+++ b/Parcial1/practicaparcial1.html
@@ -48,7 +48,7 @@
               <tbody>
                   <td>Practica 4</td>
                   <td>Manejo de Imagenes en HTML</td>
-                  <td><a href="Practica 4/practica4.html">Visitar</a></td>
+                  <td><a href="practica4.html">Visitar</a></td>
               </tbody>
               <tbody>
                   <td>Practica 5</td>
