--- a/Parcial1/practica3.html
+++ b/Parcial1/practica3.html
@@ -4,11 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Proyecto #3. Elementos basicos de HTML</title>
+  <link rel="stylesheet" href="portafolio.css">
 </head>
-<body>
-  <h1>Proyecto #3. Elementos basicos de HTML</h1>
-
-  <body style="background-color: aqua; text-align: center; text-decoration: solid;">
+<body style="background-color: white;">
+  <header>
+    <div class="contenedor">
+        <h1>Proyecto #3</h1>
+        <nav>
+            <ul>
+                <li><a href="practicaparcial1.html">Volver</a></li>
+                <li><a href="index.html">Menu Principal</a></li>
+                <li><a href="https://github.com/LicElenes1/LicElenes1.github.io">Github</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+<div>  
+<center>
+  <br><br>
+ <body style="background-color: aqua; text-align: center; text-decoration: solid;">
     Primer DIV <br>
     background-color: aqua; <br>
     text-align: center; <br>
@@ -22,12 +36,21 @@
     text-decoration: solid; <br><br>
   </body>
 
-  <body style="background-color: blue; text-align: center; text-decoration: solid;">
-    Tercer DIV <br>
-    background-color: blue; <br>
-    text-align: center; <br>
-    text-decoration: solid; <br>
-    Elenes Lafuente Santiago 4AVP <br>
-  </body>
+    <body style="background-color: blue; text-align: center; text-decoration: solid;">
+        Tercer DIV <br>
+        background-color: blue; <br>
+        text-align: center; <br>
+        text-decoration: solid; <br>
+    </body>
+</center>
+</div>
+
+  <footer>
+    <div class="contenedor">
+        <p>Proyecto #3. Elementos basicos de HTML</p>
+        <p>Pagina web hecha por - Elenes Lafuente Santiago</p>
+        <p>Alumno de la Escuela <a href="https://cetis107.edu.mx/portal/">CETIs #107</a></p>
+    </div>
+  </footer>
 </body>
 </html>
