--- a/Parcial1/practica5.html
+++ b/Parcial1/practica5.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica 5</title>
+    <link rel="stylesheet" href="portafolio.css">
 </head>
 <body>
+    <header>
+        <div class="contenedor">
+            <h1>Proyecto #5</h1>
+            <nav>
+                <ul>
+                    <li><a href="practicaparcial1.html">Volver</a></li>
+                    <li><a href="index.html">Menu Principal</a></li>
+                    <li><a href="https://github.com/LicElenes1/LicElenes1.github.io">Github</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+<center>
     <h1>Manejo de tablas en HTML</h1>
     <table border="1">
         <thead>
@@ -36,5 +50,14 @@
             </tr>
         </tbody>
     </table>
+</center>
+
+    <footer>
+        <div class="contenedor">
+            <p>Proyecto #5. Manejo de tablas en HTML</p>
+            <p>Pagina web hecha por - Elenes Lafuente Santiago</p>
+            <p>Alumno de la Escuela <a href="https://cetis107.edu.mx/portal/">CETIs #107</a></p>
+        </div>
+      </footer>
 </body>
 </html>
