--- a/Parcial1/practicaparcial1.html
+++ b/Parcial1/practicaparcial1.html
@@ -12,7 +12,7 @@
             <h1>Mi Portafolio</h1>
             <nav>
                 <ul>
-                    <li><a href="https://licelenes1.github.io/">Volver</a></li>
+                    <li><a href="index.html">Volver</a></li>
                     <li><a href="https://github.com/LicElenes1/LicElenes1.github.io">Github</a></li>
                 </ul>
             </nav>
@@ -53,7 +53,7 @@
               <tbody>
                   <td>Practica 5</td>
                   <td>Manejo de tablas en HTML</td>
-                  <td><a href="practica5.html">Visitar</a></td>
+                  <td><a href="Practica 4/practica5.html">Visitar</a></td>
               </tbody>
           </table>
         </div>
