--- a/Parcial1/Practica1_Elementos_HTML_Parte1.html
+++ b/Parcial1/Practica1_Elementos_HTML_Parte1.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="portafolio.css">
     <title></title>
 </head>
 <body>
+    <header>
+        <div class="contenedor">
+            <h1>Practica #1</h1>
+            <nav>
+                <ul>
+                    <li><a href="practicaparcial1.html">Volver</a></li>
+                    <li><a href="index.html">Menu Principal</a></li>
+                    <li><a href="https://github.com/LicElenes1/LicElenes1.github.io">Github</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <h1 style="border: 1px solid blue;">Practica #1. Elementos HTML Parte 1</h1>
     <h2 style="color: red;">Practica #1. Elementos HTML Parte 1</h2>
     <h3 style="background-color: green;">Practica #1. Elementos HTML Parte 1</h3>
@@ -22,6 +35,12 @@
     <p style="font-style: italic; font-size: medium;">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel enim dolorum quas labore dolore nihil odio cum accusantium. Dolor, autem.
     </p>
-
+    <footer>
+        <div class="contenedor">
+            <p>Practica #1  - Elementos HTML</p>
+            <p>Pagina web hecha por - Elenes Lafuente Santiago</p>
+            <p>Alumno de la Escuela <a href="https://cetis107.edu.mx/portal/">CETIs #107</a></p>
+        </div>
+    </footer>
 </body>
 </html>
