--- a/Parcial1/Practica2.html
+++ b/Parcial1/Practica2.html
@@ -4,11 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica #2. Elementos HTML parte 2</title>
+    <link rel="stylesheet" href="portafolio.css">
 </head>
 <body>
-    <h1>Practica #2. Elementos HTML parte 2</h1>
+    <header>
+        <div class="contenedor">
+            <h1>Practica #2</h1>
+            <nav>
+                <ul>
+                    <li><a href="practicaparcial1.html">Volver</a></li>
+                    <li><a href="index.html">Menu Principal</a></li>
+                    <li><a href="https://github.com/LicElenes1/LicElenes1.github.io">Github</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <br><h1>Practica #2. Elementos HTML parte 2</h1>
     <a style="color: green;" href="https://github.com/">Acceder a github</a><br>
     <a style="color: black;" href="https://cetis107.edu.mx/portal/">Acceder al portal del CETIS 107</a><br>
     <a style="color: red;" href="https://www.google.com/?hl=es">Buscar en google</a>
+
+    <footer>
+        <div class="contenedor">
+            <p>Practica #2  - Elementos HTML parte 2</p>
+            <p>Pagina web hecha por - Elenes Lafuente Santiago</p>
+            <p>Alumno de la Escuela <a href="https://cetis107.edu.mx/portal/">CETIs #107</a></p>
+        </div>
+    </footer>
 </body>
 </html>
