--- a/Parcial1/Practica 4/practica4.html
+++ b/Parcial1/Practica 4/practica4.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manejo de Imagenes en HTML</title>
+    <link rel="stylesheet" href="practica4.css">
 </head>
 <body>
+    <header>
+        <div class="contenedor">
+            <h1>Practica #4</h1>
+            <nav>
+                <ul>
+                    <li><a href="practicaparcial1.html">Volver</a></li>
+                    <li><a href="index.html">Menu Principal</a></li>
+                    <li><a href="https://github.com/LicElenes1/LicElenes1.github.io">Github</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+<center>
+    <br>
     <h1>Manejo de Imagenes en HTML</h1><hr>
     <img src="paisaje.jpg" alt="Paisaje de la playa">
-    <p>Elenes Lafuente Santiago 4AVP</p>
+</center>
+
+<footer>
+    <div class="contenedor">
+        <p>Practica #4  - Manejo de Imagenes en HTML</p>
+        <p>Pagina web hecha por - Elenes Lafuente Santiago</p>
+        <p>Alumno de la Escuela <a href="https://cetis107.edu.mx/portal/">CETIs #107</a></p>
+    </div>
+</footer>
 </body>
 </html>
