--- a/Parcial1/practicaparcial1.html
+++ b/Parcial1/practicaparcial1.html
@@ -53,7 +53,7 @@
               <tbody>
                   <td>Practica 5</td>
                   <td>Manejo de tablas en HTML</td>
-                  <td><a href="Practica 4/practica5.html">Visitar</a></td>
+                  <td><a href="practica5.html">Visitar</a></td>
               </tbody>
           </table>
         </div>
