--- a/Parcial1/Practica 4/practica4.html
+++ b/Parcial1/Practica 4/practica4.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul>
                     <li><a href="practicaparcial1.html">Volver</a></li>
-                    <li><a href="index.html">Menu Principal</a></li>
+                    <li><a href="https://licelenes1.github.io/">Menu Principal</a></li>
                     <li><a href="https://github.com/LicElenes1/LicElenes1.github.io">Github</a></li>
                 </ul>
             </nav>
