--- a/Parcial1/Practica 4/practica4.html
+++ b/Parcial1/Practica 4/practica4.html
@@ -12,7 +12,7 @@
             <h1>Practica #4</h1>
             <nav>
                 <ul>
-                    <li><a href="https://licelenes1.github.io/Parcial1/practicaparcial1.html">Volver</a></li>
+                    <li><a href="Parcial1/practicaparcial1.html">Volver</a></li>
                     <li><a href="https://licelenes1.github.io/">Menu Principal</a></li>
                     <li><a href="https://github.com/LicElenes1/LicElenes1.github.io">Github</a></li>
                 </ul>
