--- a/Parcial1/practicaparcial1.html
+++ b/Parcial1/practicaparcial1.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="contenedor">
-            <h1>Mi Portafolio</h1>
+            <h1>Mi Portafolio - Parcial 1</h1>
             <nav>
                 <ul>
                     <li><a href="https://licelenes1.github.io/">Volver</a></li>
