--- a/Parcial1/practicaparcial1.html
+++ b/Parcial1/practicaparcial1.html
@@ -55,6 +55,11 @@
                   <td>Manejo de tablas en HTML</td>
                   <td><a href="practica5.html">Visitar</a></td>
               </tbody>
+              <tbody>
+                <td>Practica 6</td>
+                <td>Formularios en HTML</td>
+                <td><a href="practica6.html">Visitar</a></td>
+              </tbody>
           </table>
         </div>
     </center>
