--- a/Parcial1/practica6.html
+++ b/Parcial1/practica6.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica #6</title>
-    <link rel="stylesheet" href="portafolio.css">
+    <link rel="stylesheet" href="practica6.css">
 </head>
 <body>
 <form action="">
