--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                 case "opcion1":
                     window.location.href = "Parcial1/practicaparcial1.html";
                     break;
+                case "opcion2":
+                    window.location.href = "Parcial2/portafolio-parcial2.html";
+                    break;
                 default:
                     break;
             }
@@ -40,6 +43,7 @@
                     <select id="menu" onchange="redireccionar()">
                       <option value="opcion">Elige un parcial</option>
                       <option value="opcion1">Parcial 1</option>
+                      <option value="opcion2">Parcial 2</option>
                   </select>
                   <select id="otros" onchange="redireccionar()">
                     <option value="opcion">Elige una direccional</option>
