--- a/Parcial1/practicaparcial1.html
+++ b/Parcial1/practicaparcial1.html
@@ -60,6 +60,11 @@
                 <td>Formularios en HTML</td>
                 <td><a href="practica6.html">Visitar</a></td>
               </tbody>
+              <tbody>
+                <td>Practica 7</td>
+                <td>Posicionamiento en HTML</td>
+                <td><a href="practica7.html">Visitar</a></td>
+              </tbody>
           </table>
         </div>
     </center>
