--- a/Parcial1/practicaparcial1.html
+++ b/Parcial1/practicaparcial1.html
@@ -65,6 +65,11 @@
                 <td>Posicionamiento en HTML</td>
                 <td><a href="practica7.html">Visitar</a></td>
               </tbody>
+              <tbody>
+                <td>Practica 8</td>
+                <td>Loteria</td>
+                <td><a href="practica8.html">Visitar</a></td>
+              </tbody>
           </table>
         </div>
     </center>
