--- a/Parcial1/practicaparcial1.html
+++ b/Parcial1/practicaparcial1.html
@@ -70,6 +70,11 @@
                 <td>Loteria</td>
                 <td><a href="practica8.html">Visitar</a></td>
               </tbody>
+              <tbody>
+                <td>Practica 9</td>
+                <td>Estilos de CSS</td>
+                <td><a href="practica9.html">Visitar</a></td>
+              </tbody>
           </table>
         </div>
     </center>
