--- a/Parcial1/practicaparcial1.html
+++ b/Parcial1/practicaparcial1.html
@@ -75,6 +75,11 @@
                 <td>Estilos de CSS</td>
                 <td><a href="practica9.html">Visitar</a></td>
               </tbody>
+              <tbody>
+                <td>Practica 10</td>
+                <td>CSS Parte 2</td>
+                <td><a href="practica10.html">Visitar</a></td>
+              </tbody>
           </table>
         </div>
     </center>
