--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </nav>
         </div>
     </header>
-    <center><br><br><h3>Foto Alumno: </h3><img src="https://avatars.githubusercontent.com/u/159394613?v=4" alt="Foto random"></center>
+    <center><br><br><h3>Foto Alumno: </h3><img src="https://avatars.githubusercontent.com/u/159394613?s=400&u=d7e9791acacfe3f560b48d6b2682220a1b5fa96b&v=4" alt="Foto random"></center>
     <br><em>
         <footer>
             <div class="contenedor">
