--- a/Parcial2/portafolio-parcial2.html
+++ b/Parcial2/portafolio-parcial2.html
@@ -19,7 +19,30 @@
         </div>
     </header>
 
-    <center><br><h1>Pagina no disponible temporalmente!!</h1></center>
+    <section id="proyectos">
+        <div class="contenedor">
+            <center><h2>Mis Proyectos</h2>
+            <table border="1">
+              <thead>
+                  <tr>
+                      <th>Nombre de la Pagina</th>
+                      <th>Descripcion</th>
+                      <th>Hipervinculo</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <td>Practica 1</td>
+                  <td>Practica #1 - Introduccion a Bootstrap</td>
+                  <td><a href="practica1.html">Visitar</a></td>
+              </tbody>
+              <tbody>
+                  <td>Practica 2</td>
+                  <td>Practica #2 - Grids en bootstrap</td>
+                  <td><a href="practica2.html">Visitar</td>     
+          </table>
+        </div>
+    </center>
+    </section>
 
     <footer>
         <div class="contenedor">
