--- a/Parcial2/portafolio-parcial2.html
+++ b/Parcial2/portafolio-parcial2.html
@@ -38,7 +38,18 @@
               <tbody>
                   <td>Practica 2</td>
                   <td>Practica #2 - Grids en bootstrap</td>
-                  <td><a href="practica2.html">Visitar</td>     
+                  <td><a href="practica2.html">Visitar</td> 
+              </tbody> 
+              <tbody>
+                <td>Practica 3</td>
+                <td>Practica #3 - Componentes de bootstrap</td>
+                <td><a href="practica3.html">Visitar</td> 
+            </tbody>
+            <tbody>
+                <td>Practica 4</td>
+                <td>Practica #4</td>
+                <td><a href="practica4.html">Visitar</td> 
+            </tbody>   
           </table>
         </div>
     </center>
