--- a/Parcial2/portafolio-parcial2.html
+++ b/Parcial2/portafolio-parcial2.html
@@ -47,8 +47,13 @@
             </tbody>
             <tbody>
                 <td>Practica 4</td>
-                <td>Practica #4</td>
+                <td>Practica #4 - Componentes de bootstrap #2</td>
                 <td><a href="practica4.html">Visitar</td> 
+            </tbody>  
+            <tbody>
+                <td>Practica 5</td>
+                <td>Practica #5 - Componentes de bootstrap #3</td>
+                <td><a href="practica5.html">Visitar</td> 
             </tbody>   
           </table>
         </div>
