--- a/Parcial2/portafolio-parcial2.html
+++ b/Parcial2/portafolio-parcial2.html
@@ -55,6 +55,11 @@
                 <td>Practica #5 - Componentes de bootstrap #3</td>
                 <td><a href="practica5.html">Visitar</td> 
             </tbody>   
+            <tbody>
+                <td>Practica 6</td>
+                <td>Practica #6 - Manejo de tablas con Bootstrap</td>
+                <td><a href="practica6.html">Visitar</a></td>
+            </tbody>
           </table>
         </div>
     </center>
