--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Github</a>
+                    <a class="nav-link" href="https://github.com/LicElenes1/LicElenes1.github.io/">Github</a>
                   </li>
                 </ul>
               </div>
