--- a/marcas.html
+++ b/marcas.html
@@ -49,29 +49,10 @@
         line-height: 1.4;
         text-align: justify;
     }
-
-    footer {
-    background-color: #5a5353;
-    color: #fff;
-    padding: 20px;
-}
-
-  .footer-col {
-    margin-bottom: 20px;
-  }
-
-  .footer-col a {
-    color: #fff;
-    text-decoration: none;
-  }
-
-  .footer-col a:hover {
-    text-decoration: underline;
-  }
 </style>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(207, 207, 207);">
     <div class="container-fluid">
-      <nav class="navbar navbar-light bg-light">
+      <nav class="navbar navbar-light" style="background-color: rgb(207, 207, 207);">
         <div class="container">
           <a class="navbar-brand" href="#">
             <img src="https://www.coca-cola.com/content/dam/onexp/global/icons/Coke-company-logo-black.svg" alt="" width="120" height="24">
@@ -119,7 +100,7 @@
         </ul>
         <button style="border: none;">
           <span>
-            <img src="imagenes/imagen-account.jpg" alt="Account" width="60" height="40">
+            <img src="imagenes/account.png" alt="Account" width="60" height="40">
           </span>
         </button>
       </div>
@@ -133,10 +114,8 @@
   </center>
 
   <div class="container">
-    <div class="article" style="text-align: center;">
-      <a href="pagina.html">
-        <img src="https://www.coca-cola.com/content/dam/onexp/global/icons/Coca-Cola.svg" alt="Articulo 1" style="margin: 0 auto;">
-      </a>
+    <div class="article">
+        <img src="https://www.coca-cola.com/content/dam/onexp/global/icons/Coca-Cola.svg" alt="Articulo 1">
     </div>
 
     <div class="article">
@@ -204,18 +183,11 @@
   </div>
 </div>
 
-
-<footer>
-  <div class="container">
-      <div class="row">
-          <div class="col-md-6">
-              <img src="https://www.coca-cola.com/content/dam/onexp/global/icons/Coke-company-logo-black.svg" alt="Logo">
-          </div>
-      </div>
-      <button>
-        <h5>Mexico</h5>
-      </button>
-  </div>
+<footer class="text-center">
+  <img src="https://www.coca-cola.com/content/dam/onexp/global/icons/Coke-company-logo-black.svg" alt="" width="120" height="24">
+  <button class="text-center">
+    <p style="text-align: left;">Mexico</p>
+  </button>
 </footer>
   <script src="js/bootstrap.js"></script>
 </body>
