--- a/Proyecto/marcas.html
+++ b/Proyecto/marcas.html
@@ -50,9 +50,9 @@
         text-align: justify;
     }
 </style>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(207, 207, 207);">
     <div class="container-fluid">
-      <nav class="navbar navbar-light bg-light">
+      <nav class="navbar navbar-light" style="background-color: rgb(207, 207, 207);">
         <div class="container">
           <a class="navbar-brand" href="#">
             <img src="https://www.coca-cola.com/content/dam/onexp/global/icons/Coke-company-logo-black.svg" alt="" width="120" height="24">
@@ -98,7 +98,7 @@
             </ul>
           </li>
         </ul>
-        <button style="border: none;" onclick="toggleDirections()">
+        <button style="border: none;">
           <span>
             <img src="imagenes/account.png" alt="Account" width="60" height="40">
           </span>
@@ -183,6 +183,12 @@
   </div>
 </div>
 
+<footer class="text-center">
+  <img src="https://www.coca-cola.com/content/dam/onexp/global/icons/Coke-company-logo-black.svg" alt="" width="120" height="24">
+  <button class="text-center">
+    <p style="text-align: left;">Mexico</p>
+  </button>
+</footer>
   <script src="js/bootstrap.js"></script>
 </body>
 </html>
