--- a/Proyecto/pagina.html
+++ b/Proyecto/pagina.html
@@ -251,8 +251,11 @@
       </button>
       </center>
   </div>
-  <footer>
-    
+  <footer class="text-center">
+    <img src="https://www.coca-cola.com/content/dam/onexp/global/icons/Coke-company-logo-black.svg" alt="" width="120" height="24">
+    <button class="text-center">
+      <p style="text-align: left;">Mexico</p>
+    </button>
   </footer>
     <script src="js/bootstrap.js"></script>
 </body>
