--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                       Parciales
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="Parcial1/practicaparcial1.html">Parcial 1</a></li>
-                      <li><a class="dropdown-item" href="Parcial2/portafolio-parcial2.html">Parcial 2</a></li>
+                      <li><a class="dropdown-item" href="Parcial1/practicaparcial1.html">Parcial 1.</a></li>
+                      <li><a class="dropdown-item" href="Parcial2/portafolio-parcial2.html">Parcial 2.</a></li>
                       <li class="nav-item">
-                        <a class="nav-link disabled" href="#" aria-disabled="true">Parcial 3</a>
+                        <a class="nav-link disabled" href="#" aria-disabled="true">Parcial 3.</a>
                       </li>
                     </ul>
                   </li>
