--- a/Proyecto/marcas.html
+++ b/Proyecto/marcas.html
@@ -94,7 +94,7 @@
               Comprar
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Coca-Cola en tu Hogar</a></li>
+              <li><a class="dropdown-item" href="#">Coca-Cola en tu Hogar.</a></li>
             </ul>
           </li>
         </ul>
