--- a/Proyecto/pagina.html
+++ b/Proyecto/pagina.html
@@ -106,7 +106,7 @@
           </div>
         </div>
       </nav>
-
+    <div class="row">
          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -257,6 +257,7 @@
       <p style="text-align: left;">Mexico</p>
     </button>
   </footer>
+</div>
     <script src="js/bootstrap.js"></script>
 </body>
 </html>
