--- a/Parcial3/proyectofinal/index.html
+++ b/Parcial3/proyectofinal/index.html
@@ -42,13 +42,13 @@
             </div>
             <div class="col">
                 <center><br><br><h3 class="card">SELECT alumno.* FROM alumno INNER JOIN matricula ON alumno.idAlumno = matricula.idAlumno INNER JOIN asignatura ON matricula.idAsignatura = asignatura.idAsignatura WHERE asignatura.nombre = "Programacion"</h3></center>
-                <img src="imagenes/consulta 5.PNG" alt="imagen5">
+                <img src="imagenes/consulta 5.png" alt="imagen5">
             </div>
             <div class="col">
                 <center><br><br><h3 class="card">SELECT profesor.*, asignatura.* FROM profesor INNER JOIN asignatura ON profesor.idProfesor = asignatura.coordinador ORDER BY profesor.nombre, asignatura.nombre
                 </h3></center>
-                <img src="imagenes/consulta 6.PNG" alt="imagen6">
-                <img src="imagenes/consulta 6.1.PNG" alt="imagen7">
+                <img src="imagenes/consulta 6.png" alt="imagen6">
+                <img src="imagenes/consulta 6.1.png" alt="imagen7">
             </div>
             <div class="col">
                 <center><br><br><h3 class="card">SELECT asignatura.nombre AS nombre_asignatura, COUNT(matricula.idAlumno) AS total_alumnos_inscritos FROM asignatura INNER JOIN matricula ON asignatura.idAsignatura = matricula.idAsignatura GROUP BY asignatura.idAsignatura ORDER BY total_alumnos_inscritos DESC</h3></center>
